--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.15.2",
     "gulp": "^3.9.1",
+    "gulp-connect": "^5.0.0",
     "gulp-gzip": "^1.4.0",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
